Resolve make errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 project(design_patterns_in_modern_cpp)
 
-set(CMAKE_CXX_STANDARD 14)
-#set(CMAKE_CXX_FLAGS "-std=c++14 -lgest -lgtest_main ${CMAKE_CXX_FLAGS}" CACHE INTERNAL "" FORCE)
+set(CMAKE_CXX_STANDARD 17) #'cmake --help-property CXX_STANDARD' or 'cmake --help-variable CMAKE_CXX_STANDARD'
 
 include_directories(googletest/googletest)
 include_directories(googletest/googletest/include)
-#link_directories(googletest/)
+link_directories(googletest/lib)
 
 add_subdirectory(./Creational/Creational)
 add_subdirectory(./Structural)
